# OpenMPI

./: .gitignore  CMakeLists.txt  main.cpp
